infrastructure/apps/production/20-worker.yml
apiVersion: v1
kind: Pod
metadata:
  name: worker
  namespace: magicbox-prod
spec:
  containers:
  - name: worker
    image: nielsgregers/magicbox-workers:latest
