infrastructure/apps/production/30-web.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: magicbox-prod
spec:
  selector:
    matchLabels:
      app: web
  replicas: 3
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: web
        image: nielsgregers/magicbox-web:latest
        ports:
          - containerPort: 3000
